--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -25,7 +25,7 @@ jobs:
         # This is set automatically by github
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: | 
-          git config user.name "Automated"
-          git config user.email "actions@users.noreply.github.com"
+          git config user.name "zhichenghao"
+          git config user.email "hzcgoodman@gmail.com"
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/mldangelo/personal-site.git
           npm run deploy
