--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -24,7 +24,7 @@ jobs:
         REACT_APP_GA_TRACKING_ID: UA-68649021-1
         # This is set automatically by github
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: | 
+      run:
           git config user.name "zhichenghao"
           git config user.email "hzcgoodman@gmail.com"
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/mldangelo/personal-site.git
