--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -27,5 +27,5 @@ jobs:
       run:
           git config user.name "zhichenghao"
           git config user.email "hzcgoodman@gmail.com"
-          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/mldangelo/personal-site.git
+          git remote set-url origin https://git:${zhichenghao}@github.com/zhicheng.git
           npm run deploy
